[NUGUDI-155] feat(api): open api 명세서 업데이트
